mabger-meter/force-app/main/default/objects/Product_Line__c/Product_Line__c.object-meta.xml
<CustomObject>
    <description>This object enables the case object to add a number of products to a case for return or warranty analysis.</description>
    <label>Product Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>