mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Use the Description field when you can&apos;t identify a product via the Item Number field above. This field allows you to populate a freeform description to help identify the product the customer is returning.</inlineHelpText>
    <label>Freeform Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>