mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Hidden_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Case_Number__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Case Number</label>
    <type>Text</type>
</CustomField>