mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Hidden_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Item_Number__c</fullName>
    <formula>IF(ISBLANK(Item_Number__r.Name),
Description__c,
Item_Number__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Item Number</label>
    <type>Text</type>
</CustomField>