mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>These notes are for internal use only and are used to log internal comments about a warranty analysis for a product line.</description>
    <inlineHelpText>These notes are for internal use only and are used to log internal comments about a warranty analysis for a product line.</inlineHelpText>
    <label>Internal Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>