mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Lines</relationshipLabel>
    <relationshipName>Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>