mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Original_Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Line_Number__c</fullName>
    <label>Original Order Line Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>