mabger-meter/force-app/main/default/objects/Product_Line__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Item_Number__c)), ISNULL(Description__c)), 
Item_Number__r.Name, 
IF(AND(NOT(ISNULL(Description__c)), ISNULL(Item_Number__c)), 
Description__c, 
Item_Number__r.Name +&quot; &quot; + Description__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>