mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>The Quantity field indicates the number of units of the product the customer indicated they were shipping back.</inlineHelpText>
    <label>Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>