mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>This field identifies the Reason a Product is being returned. This may be adjusted as necessary if the Reason indicated should be adjusted.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCURACY TESTING</fullName>
            </value>
            <value>
                <fullName>CALIBRATION - 10-POINT</fullName>
            </value>
            <value>
                <fullName>CALIBRATION - 20-POINT</fullName>
            </value>
            <value>
                <fullName>CALIBRATION - 5-POINT</fullName>
            </value>
            <value>
                <fullName>CALIBRATION - CLEAN &amp; TEST</fullName>
            </value>
            <value>
                <fullName>CALIBRATION - NIST</fullName>
            </value>
            <value>
                <fullName>CALIBRATION - NVLAP</fullName>
            </value>
            <value>
                <fullName>CALIBRATION - REPROGRAM</fullName>
            </value>
            <value>
                <fullName>CREDIT - FIELD SCRAP</fullName>
            </value>
            <value>
                <fullName>CREDIT - INCORRECT PRODUCT</fullName>
            </value>
            <value>
                <fullName>CREDIT - RESTOCK</fullName>
            </value>
            <value>
                <fullName>CREDIT - USED METER</fullName>
            </value>
            <value>
                <fullName>CUSTOMER SUPPLIED MATERIAL -</fullName>
            </value>
            <value>
                <fullName>EXCHANGE / UPGRADE - LOYALTY</fullName>
            </value>
            <value>
                <fullName>EXCHANGE / UPGRADE - NEW PRODUCT</fullName>
            </value>
            <value>
                <fullName>EXCHANGE / UPGRADE - SOFTWARE - FIRMWARE</fullName>
            </value>
            <value>
                <fullName>LOANER/DEMO -</fullName>
            </value>
            <value>
                <fullName>OTHER -</fullName>
            </value>
            <value>
                <fullName>POSSIBLE CLAIM -</fullName>
            </value>
            <value>
                <fullName>REPAIR &amp; CAL 10-POINT</fullName>
            </value>
            <value>
                <fullName>REPAIR &amp; CAL 20-POINT</fullName>
            </value>
            <value>
                <fullName>REPAIR &amp; CAL 5-POINT</fullName>
            </value>
            <value>
                <fullName>REPAIR &amp; CAL NIST</fullName>
            </value>
            <value>
                <fullName>REPAIR - ESTIMATE</fullName>
            </value>
            <value>
                <fullName>REPAIR - REPAIR &amp; TEST</fullName>
            </value>
            <value>
                <fullName>SCRAP - DISPOSAL - FEE BASED</fullName>
            </value>
            <value>
                <fullName>SCRAP - DISPOSAL - GOODWILL</fullName>
            </value>
            <value>
                <fullName>WARRANTY - REVIEW - VERIFY</fullName>
            </value>
            <value>
                <fullName>CELLULAR UPGRADE MKTG PRG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>