mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>Use this field to provide a resolution about the Product Line analyzed. These notes are customer facing and appear on the repair verification that is sent back to the customer.</inlineHelpText>
    <label>Resolution</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>