mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Sample_Size__c.field-meta.xml
<CustomField>
    <fullName>Sample_Size__c</fullName>
    <description>Indicates the sample size of units that should be automated created for the product line.</description>
    <inlineHelpText>Indicates the sample size of units that should be automated created for the product line.</inlineHelpText>
    <label>Sample Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>