mabger-meter/force-app/main/default/objects/Product_Line__c/fields/System_Description__c.field-meta.xml
<CustomField>
    <fullName>System_Description__c</fullName>
    <description>This formula field populates the item description for the Product (Item Number).</description>
    <formula>Item_Number__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the product description from the product identified within the Item Number field.</inlineHelpText>
    <label>System Description</label>
    <type>Text</type>
</CustomField>