mabger-meter/force-app/main/default/objects/Product_Line__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox indicates that the Product Line matches what was received from the customer. If the Product Lines are different, please add a case comment to and assign to the Customer Service queue.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>