mabger-meter/force-app/main/default/objects/Product_Line__c/listViews/Product_Lines_added_YESTERDAY.listView-meta.xml
<ListView>
    <fullName>Product_Lines_added_YESTERDAY</fullName>
    <columns>NAME</columns>
    <columns>ProductName__c</columns>
    <columns>Item_Number__c</columns>
    <columns>Original_Order_Number__c</columns>
    <columns>Original_Order_Line_Number__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>equals</operation>
        <value>00298846</value>
    </filters>
    <label>Product Lines added YESTERDAY</label>
</ListView>